# semant-summarization

./: .gitignore  LICENSE  MANIFEST.in  README.md  openai_api.yaml  pyproject.toml  requirements.txt
api/: requirements.txt  run.py
api.deploy/: .env.example  Dockerfile  docker-compose.yaml  update.sh
api/summarization_api/: config.py  main.py
api/summarization_api/routes/: __init__.py  summary_routes.py
api/summarization_api/schemas/: base_objects.py
semantsum/: __init__.py  __main__.py  api.py  constants.py  local_hf.py  openai.py  prompt_builder.py  summarizator_factory.py  summarizer.py
semantsum/config/: local_query_csmpt.yaml  local_query_cstinyllama.yaml  ollama_query_tiny_llama.yaml  openai_api.yaml  openai_query.yaml  openai_query_based_multi_doc.yaml  openai_query_based_multi_doc_timeline.yaml  openai_query_based_multi_doc_topic.yaml  openai_query_timeline.yaml  openai_query_topic.yaml  openai_single.yaml  openai_single_doc.yaml
tests/: test_openai.py  test_prompt_builder.py
